# Deepagent-research-context-engineering

./: .gitignore  Context_Engineering.md  Context_Engineering_Research.ipynb  DeepAgent_research.ipynb  DeepAgents_Technical_Guide.md  README.md  env.example  langgraph.json  pyproject.toml
.claude/: research-ralph-loop.local.md
context-engineering-more-deep_research_agent/: __init__.py
context_engineering_research_agent/context_strategies/: reduction.py
deepagents_sourcecode/: README.md
deepagents_sourcecode/examples/ralph_mode/: ralph_mode.py
deepagents_sourcecode/libs/acp/deepagents_acp/: __init__.py  server.py
deepagents_sourcecode/libs/acp/tests/: __init__.py  chat_model.py  test_server.py
deepagents_sourcecode/libs/deepagents-cli/deepagents_cli/: __init__.py  (+20 more)
docs/plans/: 2026-01-02-rig-deepagents-implementation-tasks.md  2026-01-02-rig-deepagents-pregel-design.md
research_agent/: agent.py  prompts.py  tools.py
research_agent/researcher/: __init__.py  agent.py  prompts.py
research_agent/skills/: __init__.py  load.py  middleware.py
research_agent/subagents/: __init__.py  definitions.py  registry.py
research_workspace/: final_report.md  research_request.md
research_workspace/large_tool_results/: call_24622lQLANPpIH9pOSmEz6mb
research_workspace/session_20260112_150419/: AI_TREND_REPORT.md  FINDINGS.md  SUMMARY.md  TODO.md
rust-research-agent/crates/rig-deepagents/: Cargo.toml
skills/academic-search/: arxiv_search.py
skills/skill-creator/scripts/: discover_skills.py  validate_skill.py
skills/skill-creator/templates/: SKILL_TEMPLATE.md
(+57 files in other folders)
